microm -> um, micros -> us

--- a/hbar.ipynb
+++ b/hbar.ipynb
@@ -295,7 +295,7 @@
     "# more constants\n",
     "\n",
     "ms = milli * s # millisecond\n",
-    "micros = micro * s # microsecond\n",
+    "us = micro * s # microsecond\n",
     "ns = nano * s # nanosecond\n",
     "minute = 60 * s # minute\n",
     "hour = 60 * minute # hour\n",
@@ -305,7 +305,7 @@
     "\n",
     "cm = centi * m # centimeter\n",
     "mm = milli * m # millimeter\n",
-    "microm = micro * m # micrometer\n",
+    "um = micro * m # micrometer\n",
     "nm = nano * m # nanometer\n",
     "fm = femto * m # femtometer, fermi\n",
     "km = kilo * m # kilometer\n",
@@ -354,10 +354,10 @@
     "v, q = None, None\n",
     "\n",
     "for v, q in globals().items():\n",
-    "    \n",
+    "\n",
     "    if isinstance(q, (int, float)):\n",
     "        print(\"{:<18}{}\".format(v, q))\n",
-    "        \n",
+    "\n",
     "    if isinstance(q, Quantity):\n",
     "        print(\"{:<18}{:<26}{}\".format(v, q.value, str(q.unit)))"
    ]
