--- a/history/hbar.ipynb
+++ b/history/hbar.ipynb
@@ -3,30 +3,52 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-30T15:19:04.752Z",
+     "iopub.status.busy": "2020-10-30T15:19:04.746Z",
+     "iopub.status.idle": "2020-10-30T15:19:04.758Z",
+     "shell.execute_reply": "2020-10-30T15:19:04.725Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# check for domain and range issues for trigonometry\n",
     "# trim unit printing format\n",
-    "# improve communications on defined quantity, e.g. print table of variables\n",
-    "# fine tune math imports\n",
     "# make or .sh for version upgrade commandline automation\n",
-    "# change naming convension from me to m_e, e to q_e, etc."
+    "# change naming convension from me to m_e, e to q_e, g, gram, ...\n",
+    "# notebook or hydrogen or nteract"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-30T15:19:04.804Z",
+     "iopub.status.busy": "2020-10-30T15:19:04.798Z",
+     "iopub.status.idle": "2020-10-30T15:19:04.813Z",
+     "shell.execute_reply": "2020-10-30T15:19:04.818Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "from math import *"
+    "from math import pi\n",
+    "from math import e as euler # prevent duplicating elementary charge\n",
+    "from math import sin, cos, tan, asin, acos, atan, sinh, cosh, tanh, asinh, acosh, atanh"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-30T15:19:05.480Z",
+     "iopub.status.busy": "2020-10-30T15:19:05.474Z",
+     "iopub.status.idle": "2020-10-30T15:19:05.489Z",
+     "shell.execute_reply": "2020-10-30T15:19:05.494Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Unit converter.\n",
@@ -68,7 +90,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-30T15:19:06.809Z",
+     "iopub.status.busy": "2020-10-30T15:19:06.804Z",
+     "iopub.status.idle": "2020-10-30T15:19:06.820Z",
+     "shell.execute_reply": "2020-10-30T15:19:06.824Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Physical quantity calculator.\n",
@@ -138,7 +167,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-30T15:19:07.514Z",
+     "iopub.status.busy": "2020-10-30T15:19:07.509Z",
+     "iopub.status.idle": "2020-10-30T15:19:07.521Z",
+     "shell.execute_reply": "2020-10-30T15:19:07.527Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# trigonometry\n",
@@ -190,7 +226,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-30T15:19:08.260Z",
+     "iopub.status.busy": "2020-10-30T15:19:08.256Z",
+     "iopub.status.idle": "2020-10-30T15:19:08.270Z",
+     "shell.execute_reply": "2020-10-30T15:19:08.275Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# SI metric prefixes\n",
@@ -222,10 +265,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-30T15:19:09.031Z",
+     "iopub.status.busy": "2020-10-30T15:19:09.026Z",
+     "iopub.status.idle": "2020-10-30T15:19:09.041Z",
+     "shell.execute_reply": "2020-10-30T15:19:09.047Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "# SI units\n",
+    "# units\n",
     "\n",
     "kg = Quantity(1, Unit({'kg' : 1}))\n",
     "m = Quantity(1, Unit({'m' : 1}))\n",
@@ -233,16 +283,7 @@
     "A = Quantity(1, Unit({'A' : 1}))\n",
     "mol = Quantity(1, Unit({'mol' : 1}))\n",
     "K = Quantity(1, Unit({'K' : 1}))\n",
-    "Cd = Quantity(1, Unit({'Cd' : 1}))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# derived units\n",
+    "Cd = Quantity(1, Unit({'Cd' : 1}))\n",
     "\n",
     "Hz = s**-1 # Hertz\n",
     "\n",
@@ -257,16 +298,44 @@
     "T = V * s / m**2 # Tesla\n",
     "Wb = T * m**2 # Weber\n",
     "Ohm = V / A # Ohm\n",
-    "H = Ohm * s # Joseph Henry"
+    "H = Ohm * s # Joseph Henry\n",
+    "\n",
+    "ms = milli * s # millisecond\n",
+    "us = micro * s # microsecond\n",
+    "ns = nano * s # nanosecond\n",
+    "minute = 60 * s # minute\n",
+    "hour = 60 * minute # hour\n",
+    "day = 24 * hour # day\n",
+    "year = 365.25 * day # year, average\n",
+    "\n",
+    "dm = deci * m # decimeter\n",
+    "cm = centi * m # centimeter\n",
+    "mm = milli * m # millimeter\n",
+    "um = micro * m # micrometer\n",
+    "nm = nano * m # nanometer\n",
+    "fm = femto * m # femtometer, fermi\n",
+    "km = kilo * m # kilometer\n",
+    "\n",
+    "L = dm ** 3 # liter\n",
+    "kph = km / hour # kilometer per hour\n",
+    "mile = 1609.344 * m # miles\n",
+    "mph = mile / hour # miles per hour"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-30T15:19:10.136Z",
+     "iopub.status.busy": "2020-10-30T15:19:10.132Z",
+     "iopub.status.idle": "2020-10-30T15:19:10.143Z",
+     "shell.execute_reply": "2020-10-30T15:19:10.147Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "# physicsal constants\n",
+    "# Universal Constants\n",
     "# https://en.wikipedia.org/wiki/List_of_physical_constants\n",
     "\n",
     "c = 299792458 * m / s # speed of light\n",
@@ -289,32 +358,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-30T15:19:10.631Z",
+     "iopub.status.busy": "2020-10-30T15:19:10.626Z",
+     "iopub.status.idle": "2020-10-30T15:19:10.639Z",
+     "shell.execute_reply": "2020-10-30T15:19:10.643Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# more constants\n",
     "\n",
-    "ms = milli * s # millisecond\n",
-    "us = micro * s # microsecond\n",
-    "ns = nano * s # nanosecond\n",
-    "minute = 60 * s # minute\n",
-    "hour = 60 * minute # hour\n",
-    "day = 24 * hour # day\n",
-    "year = 365.25 * day # year, average\n",
     "ly = c * year # light year\n",
-    "\n",
-    "cm = centi * m # centimeter\n",
-    "mm = milli * m # millimeter\n",
-    "um = micro * m # micrometer\n",
-    "nm = nano * m # nanometer\n",
-    "fm = femto * m # femtometer, fermi\n",
-    "km = kilo * m # kilometer\n",
-    "\n",
-    "kph = km / hour # kilometer per hour\n",
-    "mile = 1609.344 * m # miles\n",
-    "mph = mile / hour # miles per hour\n",
-    "\n",
-    "gacceleration = 9.80665 * m / s**2 # gravitational acceleration\n",
+    "g = 9.80665 * m / s**2 # gravitational acceleration\n",
     "gram = kg / kilo # gram\n",
     "k = 1 / (4 * pi * epsilon0) # Coulomb constant\n",
     "eV = e * V # electronvolt\n",
@@ -325,22 +382,29 @@
     "MeVpc2 = MeV / c**2 # mega electronvolt per c squared\n",
     "\n",
     "a0 = 4 * pi * epsilon0 * hbar**2 / (me * e**2) # Bohr radius\n",
-    "hground = -me * e**4 / (32 * pi**2 * epsilon0**2 * hbar**2) # ground state hydrogen energy level\n",
-    "Rinfinity = me * e**4 / (64 * pi**3 * epsilon0**2 * hbar**3 * c) # Rydberg constant\n",
+    "hground = - me * e**4 / (32 * pi**2 * epsilon0**2 * hbar**2) # ground state hydrogen energy level\n",
+    "Rinfty = me * e**4 / (64 * pi**3 * epsilon0**2 * hbar**3 * c) # Rydberg constant\n",
     "alpha = 1 / (4 * pi * epsilon0) * e**2 / (hbar * c) # fine structure constant"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-30T15:19:11.227Z",
+     "iopub.status.busy": "2020-10-30T15:19:11.218Z",
+     "iopub.status.idle": "2020-10-30T15:19:11.234Z",
+     "shell.execute_reply": "2020-10-30T15:19:11.238Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# testings\n",
     "\n",
     "assert 1 * m != 1 * kg\n",
     "assert 2 * kg != 3 * kg\n",
-    "assert N / C in V / m\n",
+    "assert N / C == V / m\n",
     "assert kg * c**2 in J\n",
     "assert hbar == 1.0545718176461565e-34 * kg * m**2 * s**-1"
    ]
@@ -348,26 +412,34 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-10-30T15:19:12.081Z",
+     "iopub.status.busy": "2020-10-30T15:19:12.077Z",
+     "iopub.status.idle": "2020-10-30T15:19:12.098Z",
+     "shell.execute_reply": "2020-10-30T15:19:12.102Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "v, q = None, None\n",
-    "\n",
-    "for v, q in globals().items():\n",
+    "for v, q in globals().copy().items():\n",
     "\n",
     "    if isinstance(q, (int, float)):\n",
-    "        print(\"{:<18}{}\".format(v, q))\n",
+    "        if v == 'pi':\n",
+    "            print('\\nMath Constants')\n",
+    "        elif v == 'yotta':\n",
+    "            print('\\nSI Metric Prefixes')\n",
+    "        print('{:<15}{}'.format(v, q))\n",
     "\n",
     "    if isinstance(q, Quantity):\n",
-    "        print(\"{:<18}{:<26}{}\".format(v, q.value, str(q.unit)))"
+    "        if v == 'kg':\n",
+    "            print('\\nUnits')\n",
+    "        elif v == 'c':\n",
+    "            print('\\nConstants')\n",
+    "        print('{:<15}{:<28}{}'.format(v, q.value, str(q.unit)))\n",
+    "\n",
+    "print()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -387,6 +459,9 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.12"
+  },
+  "nteract": {
+   "version": "0.26.0"
   }
  },
  "nbformat": 4,
