--- a/others/calculator.ipynb
+++ b/others/calculator.ipynb
@@ -3,7 +3,7 @@
     {
       "cell_type": "code",
       "source": [
-        "from hbar import *"
+        "from electronvolt import *"
       ],
       "outputs": [],
       "execution_count": null,
@@ -90,7 +90,7 @@
       "file_extension": ".py"
     },
     "nteract": {
-      "version": "0.26.0"
+      "version": "0.27.0"
     }
   },
   "nbformat": 4,
