--- a/online.ipynb
+++ b/online.ipynb
@@ -1,98 +1,95 @@
 {
-  "cells": [
-    {
-      "cell_type": "code",
-      "source": [
-        "from electronvolt import *"
-      ],
-      "outputs": [],
-      "execution_count": null,
-      "metadata": {
-        "collapsed": true,
-        "jupyter": {
-          "source_hidden": false,
-          "outputs_hidden": false
-        },
-        "nteract": {
-          "transient": {
-            "deleting": false
-          }
-        },
-        "execution": {
-          "shell.execute_reply": "2020-12-10T17:51:10.430Z",
-          "iopub.status.busy": "2020-12-10T17:51:10.381Z",
-          "iopub.execute_input": "2020-12-10T17:51:10.390Z",
-          "iopub.status.idle": "2020-12-10T17:51:10.407Z"
-        }
-      }
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-02-07T04:50:03.077Z",
+     "iopub.status.busy": "2021-02-07T04:50:03.073Z",
+     "iopub.status.idle": "2021-02-07T04:50:03.094Z",
+     "shell.execute_reply": "2021-02-07T04:50:03.055Z"
     },
-    {
-      "cell_type": "code",
-      "source": [
-        "me * c**2"
-      ],
-      "outputs": [],
-      "execution_count": null,
-      "metadata": {
-        "collapsed": true,
-        "jupyter": {
-          "source_hidden": false,
-          "outputs_hidden": false
-        },
-        "nteract": {
-          "transient": {
-            "deleting": false
-          }
-        },
-        "execution": {
-          "iopub.status.busy": "2020-12-10T17:51:10.412Z",
-          "iopub.execute_input": "2020-12-10T17:51:10.416Z",
-          "iopub.status.idle": "2020-12-10T17:51:10.425Z",
-          "shell.execute_reply": "2020-12-10T17:51:10.432Z"
-        }
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "outputs": [],
-      "execution_count": null,
-      "metadata": {
-        "collapsed": true,
-        "jupyter": {
-          "source_hidden": false,
-          "outputs_hidden": false
-        },
-        "nteract": {
-          "transient": {
-            "deleting": false
-          }
-        }
-      }
-    }
-  ],
-  "metadata": {
-    "kernelspec": {
-      "display_name": "Python 3",
-      "language": "python",
-      "name": "python3"
-    },
-    "language_info": {
-      "name": "python",
-      "version": "3.6.12",
-      "mimetype": "text/x-python",
-      "codemirror_mode": {
-        "name": "ipython",
-        "version": 3
-      },
-      "pygments_lexer": "ipython3",
-      "nbconvert_exporter": "python",
-      "file_extension": ".py"
+    "jupyter": {
+     "outputs_hidden": false,
+     "source_hidden": false
     },
     "nteract": {
-      "version": "0.27.0"
+     "transient": {
+      "deleting": false
+     }
     }
+   },
+   "outputs": [],
+   "source": [
+    "from electronvolt import *"
+   ]
   },
-  "nbformat": 4,
-  "nbformat_minor": 4
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-10T17:51:10.416Z",
+     "iopub.status.busy": "2020-12-10T17:51:10.412Z",
+     "iopub.status.idle": "2020-12-10T17:51:10.425Z",
+     "shell.execute_reply": "2020-12-10T17:51:10.432Z"
+    },
+    "jupyter": {
+     "outputs_hidden": false,
+     "source_hidden": false
+    },
+    "nteract": {
+     "transient": {
+      "deleting": false
+     }
+    }
+   },
+   "outputs": [],
+   "source": [
+    "me * c**2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "jupyter": {
+     "outputs_hidden": false,
+     "source_hidden": false
+    },
+    "nteract": {
+     "transient": {
+      "deleting": false
+     }
+    }
+   },
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.12"
+  },
+  "nteract": {
+   "version": "0.28.0"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
 }
