--- a/online.ipynb
+++ b/online.ipynb
@@ -4,21 +4,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-02-07T04:50:03.077Z",
-     "iopub.status.busy": "2021-02-07T04:50:03.073Z",
-     "iopub.status.idle": "2021-02-07T04:50:03.094Z",
-     "shell.execute_reply": "2021-02-07T04:50:03.055Z"
-    },
-    "jupyter": {
-     "outputs_hidden": false,
-     "source_hidden": false
-    },
-    "nteract": {
-     "transient": {
-      "deleting": false
-     }
-    }
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -29,21 +15,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2020-12-10T17:51:10.416Z",
-     "iopub.status.busy": "2020-12-10T17:51:10.412Z",
-     "iopub.status.idle": "2020-12-10T17:51:10.425Z",
-     "shell.execute_reply": "2020-12-10T17:51:10.432Z"
-    },
-    "jupyter": {
-     "outputs_hidden": false,
-     "source_hidden": false
-    },
-    "nteract": {
-     "transient": {
-      "deleting": false
-     }
-    }
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -53,17 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "outputs_hidden": false,
-     "source_hidden": false
-    },
-    "nteract": {
-     "transient": {
-      "deleting": false
-     }
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -85,9 +47,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.12"
-  },
-  "nteract": {
-   "version": "0.28.0"
   }
  },
  "nbformat": 4,
